Import of AGRUNDMA/Catalyst-Plugin-OrderedParams-0.04 from CPAN.
gitpan-cpan-distribution: Catalyst-Plugin-OrderedParams
gitpan-cpan-version:      0.04
gitpan-cpan-path:         AGRUNDMA/Catalyst-Plugin-OrderedParams-0.04.tar.gz
gitpan-cpan-author:       AGRUNDMA
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,15 @@
 ---
 name: Catalyst-Plugin-OrderedParams
-version: 0.03
+version: 0.04
 author:
   - 'Andy Grundman, <andy@hybridized.org>'
 abstract: Maintain order of submitted form parameters
 license: perl
 requires:
   Catalyst: 5.30
-  Tie::IxHash: 0
+  Tie::Hash::Indexed: 0
 provides:
   Catalyst::Plugin::OrderedParams:
     file: lib/Catalyst/Plugin/OrderedParams.pm
-    version: 0.03
+    version: 0.04
 generated_by: Module::Build version 0.2611
